# dnssec-validator-opennic

./: CHANGELOG  Makefile.am  README  build_osx_fat.sh  build_osx_fat_autotools.sh  configure.ac  configure.sh  install_osx_safari_add_payload.sh
add-on/: Makefile.am  Makefile.content  Makefile.cr_dnssec  Makefile.cr_tlsa  Makefile.mozz  Makefile.saf  install_chrome_variables.sh.in
add-on/chrome-dnssec/common/_locales/pl/: messages.json
add-on/firefox/common/: about.xul.in  chrome.manifest  install.rdf.in
add-on/firefox/common/defaults/preferences/: dnssec.js
add-on/firefox/common/locale/pl-PL/: dnssec.properties
add-on/firefox/common/skin/: overlay-dnssec.css  overlay-tlsa.css  overlay.css
add-on/firefox/js-ctypes/content/: about.js  constants.js  dnssec.js  dnsseclib.js.in  firefoxOverlay.xul  overlay.js  preferences.js  preferences.xul  tlsa.js  tlsalib.js.in
add-on/firefox/npapi/content/: firefoxOverlay.xul
add-on/ie/ie-dnssec-tlsa-toolbar/: DNSSECToolBar.rc
core_js-ctypes/: Makefile.am  Makefile.core  Makefile.libs  libDANEcore.ver  libDNSSECcore.ver
core_js-ctypes/bits-32/: Makefile.am
core_js-ctypes/bits-64/: Makefile.am
core_js-ctypes/bits-fat/: Makefile.am
core_native-msg/: Makefile.apps
core_native-msg/bits-32/: Makefile.am
core_native-msg/bits-64/: Makefile.am
core_native-msg/bits-fat/: Makefile.am
core_npapi/: Makefile.am
plugin-source/DNSSECValidatorPlugin/: dnssec-main.c  dnssec-plug.c  root.key
plugin-source/TLSAValidatorPlugin/: ca_store_directory.c  dane-main.c  dane-plug.c
scripts/: build_git_archive.sh  build_with_mingw32.sh  install_chrome_add_payload.sh
static-libs/: Makefile.am
